minor ui changes

--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -917,19 +917,19 @@
                                 <rect key="frame" x="16" y="104" width="288" height="380"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PSCategoryTableViewCell" rowHeight="80" id="CBU-Mc-q0d" customClass="PSCategoryTableViewCell" customModule="PostSafety" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PSCategoryTableViewCell" rowHeight="80" id="kPl-ML-uFU" customClass="PSCategoryTableViewCell" customModule="PostSafety" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="288" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CBU-Mc-q0d" id="Dv0-vt-the">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kPl-ML-uFU" id="lXR-Q7-zxB">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2gk-R7-Ns9">
-                                                    <rect key="frame" x="1" y="1" width="286" height="78.5"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1NU-Tv-hIS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="288" height="79.5"/>
                                                     <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOK-TY-6Kz">
-                                                    <rect key="frame" x="75" y="23.5" width="136.5" height="32.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AX2-Jh-Ifr">
+                                                    <rect key="frame" x="85" y="23.5" width="117.5" height="32.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
                                                     <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -937,18 +937,18 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="iOK-TY-6Kz" firstAttribute="centerX" secondItem="Dv0-vt-the" secondAttribute="centerX" id="2fH-By-ifJ"/>
-                                                <constraint firstItem="2gk-R7-Ns9" firstAttribute="top" secondItem="Dv0-vt-the" secondAttribute="top" constant="1" id="7hA-dc-aPh"/>
-                                                <constraint firstAttribute="trailing" secondItem="2gk-R7-Ns9" secondAttribute="trailing" constant="1" id="8FY-Cn-KmE"/>
-                                                <constraint firstAttribute="bottom" secondItem="2gk-R7-Ns9" secondAttribute="bottom" constant="1" id="ksF-Kp-kSk"/>
-                                                <constraint firstItem="2gk-R7-Ns9" firstAttribute="leading" secondItem="Dv0-vt-the" secondAttribute="leading" constant="1" id="nCV-5z-Oti"/>
-                                                <constraint firstItem="iOK-TY-6Kz" firstAttribute="centerY" secondItem="Dv0-vt-the" secondAttribute="centerY" id="sfJ-fO-aUz"/>
+                                                <constraint firstAttribute="trailing" secondItem="1NU-Tv-hIS" secondAttribute="trailing" id="5Us-pP-vJI"/>
+                                                <constraint firstAttribute="bottom" secondItem="1NU-Tv-hIS" secondAttribute="bottom" id="9aI-1t-P2v"/>
+                                                <constraint firstItem="AX2-Jh-Ifr" firstAttribute="centerX" secondItem="lXR-Q7-zxB" secondAttribute="centerX" id="Fvc-qz-zN7"/>
+                                                <constraint firstItem="1NU-Tv-hIS" firstAttribute="leading" secondItem="lXR-Q7-zxB" secondAttribute="leading" id="IpS-Oj-eHq"/>
+                                                <constraint firstItem="AX2-Jh-Ifr" firstAttribute="centerY" secondItem="lXR-Q7-zxB" secondAttribute="centerY" id="cmh-fr-bjr"/>
+                                                <constraint firstItem="1NU-Tv-hIS" firstAttribute="top" secondItem="lXR-Q7-zxB" secondAttribute="top" id="uVz-yr-C75"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="categoryTitleLabel" destination="iOK-TY-6Kz" id="5he-of-pFf"/>
-                                            <outlet property="mainView" destination="2gk-R7-Ns9" id="hLU-uD-442"/>
+                                            <outlet property="categoryTitleLabel" destination="AX2-Jh-Ifr" id="QJh-PQ-h4d"/>
+                                            <outlet property="mainView" destination="1NU-Tv-hIS" id="fMa-88-p4e"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1666,10 +1666,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AST-SU-VEi">
-                                        <rect key="frame" x="35.5" y="20" width="250" height="44"/>
+                                        <rect key="frame" x="35" y="20" width="250" height="44"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Subcategory" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-Qd-mSa">
-                                                <rect key="frame" x="16" y="7" width="218" height="30"/>
+                                                <rect key="frame" x="16.5" y="7" width="218" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                                 <color key="textColor" red="0.87279921770095825" green="0.42015409469604492" blue="0.2514818012714386" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
