--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -1694,18 +1694,32 @@
                                             <action selector="backButtonTouched:" destination="ePa-kr-puY" eventType="touchUpInside" id="HCA-Hv-7It"/>
                                         </connections>
                                     </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1W-AY-hfN">
+                                        <rect key="frame" x="276" y="20" width="44" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="i1W-AY-hfN" secondAttribute="height" id="BXc-9N-iBt"/>
+                                        </constraints>
+                                        <state key="normal" image="back"/>
+                                        <connections>
+                                            <action selector="forwardButtonTouched:" destination="ePa-kr-puY" eventType="touchUpInside" id="dnb-Xd-1qO"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="AST-SU-VEi" firstAttribute="top" secondItem="u6n-gQ-g6a" secondAttribute="top" constant="20" id="21M-Xu-nr5"/>
+                                    <constraint firstItem="i1W-AY-hfN" firstAttribute="top" secondItem="u6n-gQ-g6a" secondAttribute="top" constant="20" id="2kd-z2-Mpg"/>
                                     <constraint firstAttribute="height" constant="64" id="3Xm-vM-xgB"/>
                                     <constraint firstItem="XYa-Cx-g59" firstAttribute="top" secondItem="u6n-gQ-g6a" secondAttribute="top" constant="20" id="4F3-4H-V70"/>
+                                    <constraint firstItem="i1W-AY-hfN" firstAttribute="width" secondItem="i1W-AY-hfN" secondAttribute="height" id="8fk-KC-AsP"/>
                                     <constraint firstItem="AST-SU-VEi" firstAttribute="centerY" secondItem="XYa-Cx-g59" secondAttribute="centerY" id="Cav-4s-QUd"/>
                                     <constraint firstItem="fvI-Qd-mSa" firstAttribute="centerY" secondItem="XYa-Cx-g59" secondAttribute="centerY" id="DvG-WN-5VA"/>
                                     <constraint firstAttribute="bottom" secondItem="AST-SU-VEi" secondAttribute="bottom" id="PCg-bL-Hyb"/>
                                     <constraint firstAttribute="bottom" secondItem="XYa-Cx-g59" secondAttribute="bottom" id="TAs-GP-cNP"/>
+                                    <constraint firstAttribute="bottom" secondItem="i1W-AY-hfN" secondAttribute="bottom" id="YDo-2K-zNS"/>
                                     <constraint firstItem="XYa-Cx-g59" firstAttribute="leading" secondItem="u6n-gQ-g6a" secondAttribute="leading" id="YZ4-M0-CcI"/>
                                     <constraint firstItem="AST-SU-VEi" firstAttribute="centerX" secondItem="u6n-gQ-g6a" secondAttribute="centerX" id="eTd-7V-Zmk"/>
+                                    <constraint firstAttribute="trailing" secondItem="i1W-AY-hfN" secondAttribute="trailing" id="ufU-Qm-dPL"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u9r-FX-DFE">
@@ -1756,6 +1770,7 @@
                     <navigationItem key="navigationItem" id="NEg-jZ-9TC"/>
                     <connections>
                         <outlet property="backgroundView" destination="x6J-lE-fHm" id="j0n-DA-Qkx"/>
+                        <outlet property="forwardButton" destination="i1W-AY-hfN" id="N6T-ii-pU0"/>
                         <outlet property="pageControl" destination="YHJ-ye-jAC" id="gM9-UW-KoJ"/>
                         <outlet property="subCategoryTableView" destination="C47-5A-fm9" id="hS3-3g-sJg"/>
                         <segue destination="rqu-UY-ohG" kind="push" identifier="toReportLocationFromSubcategory" id="z08-Pk-UqW"/>
